# qtssh

./: Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  configure.in.in  kssh.kdevprj  kssh.kdevses  kssh.lsm  kssh.spec  kssh.xpm  qtssh.pro  subdirs
admin/: am_edit  mkinstalldirs
admin/CVS/: Entries  Repository  Root
doc/: Makefile.in
doc/en/: Makefile.am  Makefile.in  index.docbook
kssh/: Makefile.am  Makefile.in  kssh.cpp  kssh.desktop  kssh.h  ksshdialog.ui  main.cpp
po/: Makefile.in  kssh.pot
src/: kssh.cpp  kssh.h  ksshdialog.cpp  main.cpp  processharness.cpp  processharness.h  processharness.h~  qtconfig.cpp  qtconfig.h  qtfilechooser.cpp  qtfilechooser.h  qtssh.cpp  qtssh.h  qtsshconstants.h  qtsshdialog.ui  ssh.desktop  test.qml
